# Fornax

./: .gitignore  CMakeLists.txt  PostMortem.docx
include/VulkanSDK/: Getting_Started.html  Release_Notes.html  build_samples.sh
include/VulkanSDK/doc/: apispec.html  device_simulation_layer.html  getting_started.html  index.html  layer_configuration.html  loader_and_layer_interface.html  release_notes-1.0.html  via.html  vulkaninfo.html
include/VulkanSDK/examples/: CMakeLists.txt
include/VulkanSDK/source/layer_factory/: layer_factory.cpp  layer_factory.h
include/VulkanSDK/source/layers/: api_dump.cpp  api_dump_html.h  api_dump_text.h  object_tracker.cpp  parameter_validation.cpp  thread_check.h  unique_objects_wrappers.h  vk_extension_helper.h
include/VulkanSDK/source/lib/: libvulkan.so.1.0.68
include/glfw-3.2.1/: cmake_install.cmake  cmake_uninstall.cmake
include/glfw-3.2.1/examples/: boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
include/glfw-3.2.1/src/: cmake_install.cmake
include/glfw-3.2.1/tests/: clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  timeout  title  vulkan  windows
include/glfw-3.2.1/x86_64/: libglfw.so.3.2
include/gli/gli/: type.hpp
source/: FornaxApp.cpp  FornaxApp.h  PrecompiledHeader.h  main.cpp
source/assets/shaders/: deferred.frag  radialblur.frag  sceneSDF.frag  shader.frag  softbody.vert
source/core/: Camera.cpp
source/physics/: Collider.h  PhysicsBackend.cpp  PhysicsBackend.h  RigidBody.cpp  RigidBody.h  SBLattice.cpp  SBLattice.h
source/render/: Camera.cpp  Camera.h  FornaxApp.cpp  FornaxApp.h  Model.cpp  Model.h  VkRenderBackend.cpp  VkRenderBackend.h  VkRenderBase.cpp  VkRenderBase.h  VulkanBuffer.h  VulkanDevice.h  VulkanHeader.h  VulkanInitializers.h  VulkanModel.cpp  VulkanModel.h  VulkanSwapchain.h  VulkanWindow.h
source/shaders/: shader.frag  shader.vert
source/shaders/spirv/: shader.frag.spv  shader.vert.spv
